# Lineweights

./: .gitignore  BUILD.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md  package-lock.json  package.json
.github/workflows/: ci-cd.yml  release.yml
assets/: app.css  fonts.css
samples/: entries.json  shotsy.csv
src/: app.rs  main.rs  prelude.rs
src/app/: app.rs  mod.rs  state.rs
src/chart/: chart.rs  dimension.rs  drag.rs  factory.rs  line.rs  mod.rs  palette.rs  point.rs  scatter.rs  style.rs  view.rs  zoom.rs
src/chart/.expect/factory/: get_points_for_sma1c.expect.yaml  get_trend_points.expect.json  get_trend_points.expect.yaml  get_weight_scatter.expect.json  get_weight_scatter.expect.yaml
src/components/: app.rs  chart.rs  hero.rs  import.rs  mod.rs  table.rs
src/entries/: collection.rs  entry.rs  medication.rs  mod.rs  processor.rs  range.rs  shot.rs  state.rs
src/entries/.expect/collection/: new.expect.yaml
src/extensions/: mod.rs
src/import/: import.rs  mod.rs  shotsy.rs
src/import/.expect/shotsy/: import.expect.json  import.expect.yaml
src/nav/: actions.rs  header.rs  menu.rs  mod.rs  navigation.rs  state.rs
src/schema/: data.rs  entry.rs  mod.rs  page.rs  shot.rs  shotsy.rs  state.rs  weight.rs
src/settings/: goals.rs  height.rs  mod.rs  settings.rs  state.rs
src/state/: mod.rs  state.rs  storage.rs
src/statistics/: bmi.rs  mod.rs  simple_moving_average.rs  trend.rs  weight.rs
src/statistics/.expect/trend/: _get_trend.expect.json  _get_trend.expect.yaml
src/table/: mod.rs  table.rs
src/verify/: context.rs  error.rs  fs.rs  mod.rs  prelude.rs  verify.rs
verify/chart/factory/tests/: get_points_for_sma1c.verified.json  get_trend_points.verified.json  get_weight_scatter.verified.json
verify/entries/collection/tests/: new.verified.json
verify/statistics/trend/tests/: _get_trend.verified.json
